--- a/css/styles.css
+++ b/css/styles.css
@@ -6097,7 +6097,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #EA4335 !important;
+  background-color: #4E0707 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -9799,7 +9799,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #bd5d38 !important;
+  color: #B90E0A !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
