--- a/css/styles.css
+++ b/css/styles.css
@@ -6097,7 +6097,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #4E0707 !important;
+  background-color: #B90E0A !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
