--- a/css/styles.css
+++ b/css/styles.css
@@ -10100,7 +10100,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #BC544B;
+  background-color: #FFFFFF;
 }
 
 .dev-icons {
