--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
  * Copyright 2011-2020 The Bootstrap Authors
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ This won't update
  */
 :root {
   --blue: #007bff;
